# kko_grayscale_compression

./: AdaptiveImageScanner.h  BinaryEncoder.h  CMakeLists.txt  EncodingTreeData.h  Iterable.h  Makefile  RawGrayscaleImageDataReader.cpp  RawGrayscaleImageDataReader.h  Tree.h  View2D.h  adaptive_blocks_decoding.h  adaptive_blocks_encoding.h  adaptive_common.h  adaptive_decoding.h  adaptive_encoding.h  bench.cpp  benchmarks_merlin.html  block_scorers.h  constants.h  decoding.cpp  decoding.h  encoding.cpp  encoding.h  image_traversal.h  main.cpp  models.h  static_decoding.h  static_encoding.h  test.cpp  utils.h
args/: ValidPathCheckAction.cpp  ValidPathCheckAction.h
include/: observer_ptr.hpp
